# CPUID

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  _clang-format  clean_cmake.sh  make_cmake.sh
include/: CPUID.hpp
libs/: CMakeLists.txt  CPUID.cpp
tests/: CMakeLists.txt  test.cpp
